# financial_planner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  financial_simulation_results.csv  git-tree.ps1  mkdocs.yml  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: build.yml  documentation.yml
apps/frontend/financial-planner-frontend/: package.json  project.json
apps/frontend/financial-planner-frontend/src/components/: FinancialLineChart.js  SimulationControls.js
apps/python-backend/: project.json  pyproject.toml
apps/python-backend/src/financial_planner/: backend_api.py  config_loader.py  person.py  simulation_engine.py
apps/python-backend/tests/: test_backend_api.py  test_config_loader.py  test_household.py  test_person.py
apps/tools/start-all/: project.json
docs/: index.md
docs/examples/: example.yaml
docs/explanation/: architecture.md  design_choices.md  index.md
docs/how_to/: adding_members.md  adjust_tax_rates.md  index.md  update_inflation_rate.md
docs/project_plan/: project_overview.md
docs/reference/: financial_planner.md
docs/tutorials/: first_simulation.md  getting_started.md  index.md
scripts/: lint.py
src/financial_planner/: __init__ copy.py  __init__.py  backend_api.py  config_loader.py  household.py  person.py  report_generator.py  simulation_engine.py
src/financial_planner/frontend/financial-planner-frontend/: package-lock.json
src/financial_planner/frontend/financial-planner-frontend/src/: App.js  index.js
src/financial_planner/frontend/financial-planner-frontend/src/components/: DownloadButton.js  FinancialBarChart.js  FinancialTable.js  ResultsDisplay.js  ScenarioUploader.js
src/financial_planner/frontend/financial-planner-frontend/src/config/: chartConfig.js
src/financial_planner/frontend/financial-planner-frontend/src/helpers/: chartHelpers.js
src/financial_planner/frontend/financial-planner-frontend/src/hooks/: useSimulationResults.js
tests/: test_config_loader.py  test_household.py  test_person.py  test_report_generator.py  test_simulation_engine.py
