[project]
name = "financial_planner"
authors = [
  { name = "financial_planner", email = "king.arthur@camelot.bt" }
]
description = "Financial Planning Tools"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0"
]

[project.urls]
Documentation = "https://jcmullwh.github.io/financial_planner/"
Source = "https://github.com/jcmullwh/financial_planner"


[tool.mypy]
python_version = 3.9  # Ensure this matches your project's Python version
files = ["src/financial_planner"]
mypy_path = "src"  # Add this line to include the src directory in the search path
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[tool.ruff]
target-version = "py39"
line-length = 120
[tool.ruff.lint]
extend-select = ["I"]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like dict.get(... True)
    "FBT003",
    # Ignore checks for possible passwords
    "S105",
    "S106",
    "S107",
    # Ignore complexity
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    # Not useful for early iterations
    "T201" # No print
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101","PLR2004","E712"]

[tool.pytest.ini_options]
addopts = "--cov=financial_planner/ --cov-report=term-missing"
asyncio_mode = "strict"


[tool.pdm.dev-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio",
  "types-PyYAML>=6.0"
  ]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.21",
  "mkdocstrings[python]>=0.25.1"
]
ruff = ">=0.8.5"
mypy = ">=1.10.0"
deptry = ">=0.16.1"
pre-commit = ">=3.7.0"
tox = ">=4.15.0"


[tool.pdm.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = "scripts/lint.py"
lint-check = "scripts/lint-check.py"
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[tool.pdm.build]
# excludes = ["./**/.git"]
# package-dir = "."
package-dir = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"